postgres/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
